# Vault-Reader

./: .gitattributes  .gitignore  README.md  app.js  index.html  main.js  package-lock.json  package.json  preload.js  styles.css
scripts/: build-web-dist.js  copy-light-exe.js  copy-vendor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
